Feat/google oauth login (#6)
* feat(auth): find user by email
* feat(oauth): set dynamic state oauth
* feat(oauth): get oauth user profile
* feat(oauth): create generic token
* chore(oauth): make explicit endpoint
* chore(oauth): adjust the handler detail
