# internal/app/backend/server/impl_GoogleOauthCodeExchange.go
@@ -7,9 +7,19 @@ import (
 )
 
 // Oauth code exchange
-// (POST /api/v1/oauth)
+// (POST /api/v1/oauth/google)
 func (s *Server) GoogleOauthCodeExchange(ctx echo.Context) error {
-	output, err := s.OAuthService.ExchangeToken(ctx.Request().Context(), oauth.GoogleOauthCodeExchangeInput{})
+	var req api.GoogleOauthCodeExchangeRequest
+	if err := bindOrReturnBadRequest(ctx, &req); err != nil {
+		return err
+	}
+	var actions []oauth.ExchangeTokenAction
+	for _, act := range req.Actions {
+		actions = append(actions, oauth.ExchangeTokenAction(act))
+	}
+	output, err := s.OAuthService.ExchangeToken(ctx.Request().Context(), oauth.GoogleOauthCodeExchangeInput{
+		Actions: actions,
+	})
 	if err != nil {
 		return returnError(ctx, err)
 	}
